--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 candle-core = { version = "0.3.1", features = ["mkl"] }
 candle-nn = { version = "0.3.1", features = ["mkl"] }
+clap = "4.4.11"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 tokenizers = { version = "0.15.0", features = ["hf-hub"] }
 tokio = "1.34.0"
