--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -10,5 +10,7 @@ candle-core = { version = "0.3.1", features = ["mkl"] }
 candle-nn = { version = "0.3.1", features = ["mkl"] }
 clap = "4.4.11"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
+memmap2 = "0.9.0"
+safetensors = "0.4.1"
 tokenizers = { version = "0.15.0", features = ["hf-hub"] }
 tokio = "1.34.0"
