--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -12,5 +12,7 @@ clap = "4.4.11"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 memmap2 = "0.9.0"
 safetensors = "0.4.1"
+serde = "1.0.193"
+serde_json = "1.0.108"
 tokenizers = { version = "0.15.0", features = ["hf-hub"] }
 tokio = "1.34.0"
