--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.75"
 candle-core = { version = "0.3.1", features = ["mkl"] }
 candle-nn = { version = "0.3.1", features = ["mkl"] }
+candle-transformers = { version = "0.3.2", features = ["mkl"] }
 clap = "4.4.11"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 memmap2 = "0.9.0"
