--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -18,3 +18,10 @@ serde = "1.0.193"
 serde_json = "1.0.108"
 tokenizers = { version = "0.15.0", features = ["hf-hub"] }
 tokio = "1.34.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "case1"
+harness = false
