Cargo features changed

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-candle-core = { version = "0.3.2" }
-candle-nn = { version = "0.3.2" }
-candle-transformers = { version = "0.3.2" }
+candle-core = { version = "0.3.2", features = ["cuda"] }
+candle-nn = { version = "0.3.2", features = ["cuda"] }
+candle-transformers = { version = "0.3.2", features = ["cuda"] }
 clap = "4.4.11"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 memmap2 = "0.9.0"
 safetensors = "0.4.1"
 serde = "1.0.193"
 serde_json = "1.0.108"
-tch = { version = "0.14.0", features = ["download-libtorch", "clap", "memmap2"] }
+tch = { version = "0.14.0", features = ["clap", "memmap2"] }
 tokenizers = { version = "0.15.0", features = ["hf-hub"] }
 tokio = "1.34.0"
 
